src/main/java/com/example/demo/error/ApiSubError.java
package com.example.demo.error;

public abstract class ApiSubError {
    
}
